--- a/src/template.html
+++ b/src/template.html
@@ -43,6 +43,14 @@
         height: 100%;
         max-height: 100%;
       }
+      .markdown img {
+        max-width: 300px;
+        max-height: 200px;
+      }
+      .markdown a {
+        color: #0001A7;
+        cursor: pointer;
+      }
       #scroll::-webkit-scrollbar-track {
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
         border-radius: 6px;
