--- a/src/template.html
+++ b/src/template.html
@@ -43,6 +43,9 @@
         height: 100%;
         max-height: 100%;
       }
+      div#jseprivacy {
+        display: none;
+      }
       .markdown img {
         max-width: 300px;
         max-height: 200px;
