--- a/src/template.html
+++ b/src/template.html
@@ -54,16 +54,16 @@
         color: #0001A7;
         cursor: pointer;
       }
-      #scroll::-webkit-scrollbar-track {
+      .scroll::-webkit-scrollbar-track {
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
         border-radius: 6px;
         background-color: #24997e;
       }
-      #scroll::-webkit-scrollbar {
+      .scroll::-webkit-scrollbar {
         width: 8px;
         background-color: #24997e;
       }
-      #scroll::-webkit-scrollbar-thumb {
+      .scroll::-webkit-scrollbar-thumb {
         border-radius: 6px;
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
         background-color: #555;
