feature(chat): Markdown chat styling

--- a/src/renderer/template.html
+++ b/src/renderer/template.html
@@ -54,6 +54,12 @@
         color: #0001A7;
         cursor: pointer;
       }
+      .chat p {
+        margin: 0 0 0 12px;
+      }
+      .chat p.header {
+        margin: 0;
+      }
       .scroll::-webkit-scrollbar-track {
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
         border-radius: 6px;
