--- a/src/renderer/template.html
+++ b/src/renderer/template.html
@@ -40,16 +40,16 @@
         height: 100%;
         max-height: 100%;
       }
-      .scroll::-webkit-scrollbar-track {
+      *::-webkit-scrollbar-track {
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
         border-radius: 6px;
         background-color: #24997e;
       }
-      .scroll::-webkit-scrollbar {
+      *::-webkit-scrollbar {
         width: 8px;
         background-color: #24997e;
       }
-      .scroll::-webkit-scrollbar-thumb {
+      *::-webkit-scrollbar-thumb {
         border-radius: 6px;
         -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
         background-color: #555;
